--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <style>
         body {
             background-color: rgb(215, 215, 215);
+            background-image: url('https://images.pexels.com/photos/356036/pexels-photo-356036.jpeg'); /* Replace with your image path */
+            background-size: cover; /* Cover the entire viewport */
+            background-position: center; /* Center the image */
+            background-repeat: no-repeat; /* Do not repeat the image */
+            background-attachment: fixed; /* Fix the background while scrolling */
         }
 
         .header {
