--- a/index.html
+++ b/index.html
@@ -170,6 +170,8 @@
             iframe.title = "SOE"
             const header = document.querySelector('.DB');
             header.classList.toggle('hidden');
+            const additionalButtons = document.getElementById('Estate-buttons');
+            additionalButtons.classList.toggle('hidden');
         }
 
 
